--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "username": "postgres",
     "password": "robertico1234$",
     "database": "twitter_prod",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres",
     "operatorsAliases": false,
     "use_env_variable": "DATABASE_URL"
