--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.4"
+    "pg-hstore": "^2.3.4"
   },
   "engines": {
     "node": "14.x"
