--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "migrations": "sequelize db:migrate",
+    "start": "npm run migrations && node app.js"
   },
   "keywords": [],
   "author": "",
